:sparkles: Create Form component | Create types | Create composables

--- a/src/styles/base/globals.scss
+++ b/src/styles/base/globals.scss
@@ -1,8 +1,8 @@
-@use './spacing-utils';
+@use '../settings/colors' as *;
+@use '../settings/spacing' as *;
+@use '../settings/variables' as *;
 
-@import '../settings/colors';
-@import '../settings/spacing';
-@import '../settings/variables';
+@use './spacing-utils';
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
