--- a/src/styles/components/_button.module.scss
+++ b/src/styles/components/_button.module.scss
@@ -6,7 +6,7 @@
   padding: $space-sm $space-md;
   font-size: $font-size-base;
   background-color: $color-bg-secondary;
-  border: none;
+  border: 1px solid $color-text-primary;
   border-radius: 4px;
   cursor: pointer;
 
